// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchView /> @renders in default state 1`] = `
<section
  className="SearchView"
>
  <SearchBarMocked
    onSubmit={[Function]}
  />
</section>
`;

exports[`<SearchView /> @renders in with movies state 1`] = `
<section
  className="SearchView"
>
  <SearchBarMocked
    onSubmit={[Function]}
  />
  <LayoutGridMocked
    data={
      Object {
        "1": Object {},
        "2": Object {},
      }
    }
  />
</section>
`;
